// Defines the UpdateUserRequest and UpdateUserResponse messages

syntax = "proto3";

package users;

option go_package = "github.com/alenalato/users-service/pkg/grpc";

import "google/protobuf/field_mask.proto";
import "common.proto";

message UpdateUserRequest {
  // user ID of the user to be updated
  string user_id = 10;

  // update is used to specify the fields to be updated
  message Update {
    string first_name = 10;
    string last_name = 20;
    // nickname is a unique identifier for the user and will be checked for uniqueness
    string nickname = 30;
    // email is a unique identifier for the user and will be checked for uniqueness
    string email = 40;
    string country = 50;
  }
  Update update = 20;

  // update_mask is used to specify which fields should be updated
  // with the values in the update field
  google.protobuf.FieldMask update_mask = 500;
}

message UpdateUserResponse {
  // the updated user
  User user = 10;
}
